fix: contenteditable: padding-left: 3px // coz chrome focus border was making cursor and characters hard to see at leftmost pos

--- a/src/app/tree-shared/cells/contenteditable-cell/contenteditable-cell.component.sass
+++ b/src/app/tree-shared/cells/contenteditable-cell/contenteditable-cell.component.sass
@@ -6,6 +6,7 @@
   width: 100%
   vertical-align: middle
   padding-top: 4px // hack for centering text in contenteditable
+  padding-left: 3px // coz chrome focus border was making cursor and characters hard to see at leftmost pos
 
 //[contenteditable] *
 //  vertical-align: middle
